# fetch_aozora

./: fetch_aozora.py  normalize_text.py  pyproject.toml  wakati_text.py  wakati_text_ginza.py
